--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,6 +15,9 @@
             <div> name
                     <input type="text" th:field ="${customers.name}">
             </div>
+            <div> date
+                <input type="date" th:field ="${customers.localDate}">
+            </div>
             <div> Password
                 <input type="password" th:field ="${customers.password}">
             </div>
